--- a/main.css
+++ b/main.css
@@ -18,58 +18,29 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Roboto", sans-serif; }
-
-p,
-a {
-  font-family: "Roboto", sans-serif; }
-
 .grid-container {
   display: grid;
   max-width: 1200px;
   margin: 0 auto;
-  background: white;
+  background: #9b2727;
   grid-template-columns: auto;
-  grid-auto-rows: minmax(10px, auto); }
-
-header {
-  display: flex;
-  justify-content: center; }
-  header img.logo-top {
-    padding: 1rem 0; }
+  grid-auto-rows: minmax(100px, auto);
+  grid-template-areas: "nav" "header" "products" "clients" "footer"; }
 
 nav {
+  grid-area: nav;
   background: #f2f5f7;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 0rem 2rem;
-  min-height: 4rem; }
-  nav a,
-  nav a:visited,
-  nav a:hover,
-  nav a:active {
-    font-size: 1.3em;
+  padding: 0rem 2rem; }
+  nav a, nav a:visited, nav a:hover, nav a:active {
+    font-size: 0.8em;
+    font-weight: bold;
     color: #505d68;
     text-decoration: none;
     margin: 0 1rem 0 1rem; }
 
-@media screen and (min-width: 640px) {
-  nav img.logo {
-    height: 4rem; }
-  nav img.menu {
-    display: none; }
-  nav.home-page {
-    justify-content: center; }
-    nav.home-page img.logo {
-      display: none; } }
-
 body {
-  background: #d4d3d3; }
+  background: darkcyan; }
