--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,11 +1,20 @@
 nav {
-    background: #f2f5f7;
+    background: var(--light-background);
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
     padding: 0rem 2rem;
     min-height: 4rem;
+    border-width: 1px 0;
+    border-color: var(--dark-background);
+    border-style: solid;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+
+    img.logo {
+        height: 4rem;
+    }
 
     a,
     a:visited,
@@ -13,19 +22,14 @@ nav {
     a:active {
         font-size: 1.3em;
         // font-weight: bold;
-        color: #505d68;
+        color: var(--primary-dark);
         text-decoration: none;
         margin: 0 1rem 0 1rem;
     }
 }
 
-@media screen and (min-width: 640px) {
-    
+@media screen and (min-width: 641px) {
     nav {
-        img.logo {
-            height: 4rem;
-        }
-
         img.menu {
             display: none;
         }
@@ -34,6 +38,24 @@ nav {
             img.logo {
                 display: none;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 640px) {
+    nav {
+        padding: 0 0.5rem;
+        border: 0;
+
+        img.logo {
+            width: 100%;
+            max-width: 20rem;
+            min-width: 0;
+            margin: 0 auto;
+        }
+
+        a {
+            display: none;
         }
     }
 }
