--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/colors';
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/nav';
