--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,8 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/nav';
+@import 'layout/main';
+@import 'components/recipe-card';
 
 body {
     background: rgb(212, 211, 211);
