--- a/css/main.css
+++ b/css/main.css
@@ -103,5 +103,23 @@ nav {
     nav a {
       display: none; } }
 
+main {
+  background: saddlebrown;
+  padding: 1rem; }
+  main section.recipes {
+    width: 100%;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+    margin: 0 auto; }
+
+article.recipe-card {
+  grid-column: auto /span 1;
+  display: flex;
+  width: 100%;
+  height: 200px;
+  background: salmon; }
+
 body {
   background: #d4d3d3; }
