--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,19 +1,5 @@
 main {
-    background: saddlebrown;
+    background: var(--light-background);
     padding: 1rem;
-
-    section.recipes {
-        width: 100%;
-        max-width: 1000px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem;
-        margin: 0 auto;
-    }
+   
 }
-
-// @media screen and (max-width: 640px) {
-//     section.recipes {
-//         grid-template-columns: repeat(1, 1fr);
-//     }
-// }
