--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'layout/header';
 @import 'layout/nav';
 @import 'layout/main';
+@import 'layout/section-recipe-collection';
 @import 'components/recipe-card';
 
 body {
