--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,9 +1,8 @@
 nav {
     background: var(--light-background);
     display: flex;
-    justify-content: flex-start;
+    // justify-content: flex-start;
     align-items: center;
-    flex-wrap: wrap;
     padding: 0rem 2rem;
     min-height: 4rem;
     border-width: 1px 0;
@@ -21,7 +20,6 @@ nav {
     a:hover,
     a:active {
         font-size: 1.3em;
-        // font-weight: bold;
         color: var(--primary-dark);
         text-decoration: none;
         margin: 0 1rem 0 1rem;
