recipe card home 100% done

--- a/sass/components/_recipe-card.scss
+++ b/sass/components/_recipe-card.scss
@@ -7,6 +7,8 @@ article.recipe-card {
     position: relative;
     width: 100%;
     background: salmon;
+    border: 0 solid #c2d1d9;
+    border-radius: 5px;
     grid-template-areas:
         "recipe-feedback-container"
         "recipe-numbers-container"
@@ -25,6 +27,8 @@ article.recipe-card {
         color: var(--light-text);
         font-weight: 300;
         font-size: 1.7em;
+        border-bottom-left-radius: inherit;
+        border-bottom-right-radius: inherit;
     }
 
     picture {
@@ -37,6 +41,7 @@ article.recipe-card {
         width: 100%;
         height: 100%;
         z-index: 0;
+        border-radius: inherit;
 
         img,
         source {
@@ -44,6 +49,7 @@ article.recipe-card {
             height: 100%;
             object-fit: cover;
             opacity: 90%;
+            border-radius: inherit;
         }
     }
 
@@ -120,6 +126,10 @@ article.recipe-card {
 
 @media screen and (max-width: 640px) {
     p.recipe-description {
+        display: none;
+    }
+
+    button.card-button {
         display: none;
     }
 }
