--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,14 @@ header {
     max-width: 40rem;
     min-width: 0; }
 
+@media screen and (min-width: 993px) {
+  header img.logo-top-medium {
+    display: none; } }
+
+@media screen and (min-width: 641px) and (max-width: 992px) {
+  header img.logo-top {
+    display: none; } }
+
 @media screen and (max-width: 640px) {
   header {
     display: none; } }
@@ -134,6 +142,8 @@ article.recipe-card {
   position: relative;
   width: 100%;
   background: salmon;
+  border: 0 solid #c2d1d9;
+  border-radius: 5px;
   grid-template-areas: "recipe-feedback-container" "recipe-numbers-container" "title"; }
   article.recipe-card h3,
   article.recipe-card .recipe-feedback-container,
@@ -145,7 +155,9 @@ article.recipe-card {
     background: rgba(0, 0, 0, 0.4);
     color: var(--light-text);
     font-weight: 300;
-    font-size: 1.7em; }
+    font-size: 1.7em;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit; }
   article.recipe-card picture {
     grid-area: picture;
     position: absolute;
@@ -155,13 +167,15 @@ article.recipe-card {
     align-items: center;
     width: 100%;
     height: 100%;
-    z-index: 0; }
+    z-index: 0;
+    border-radius: inherit; }
     article.recipe-card picture img,
     article.recipe-card picture source {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 90%; }
+      opacity: 90%;
+      border-radius: inherit; }
   article.recipe-card .recipe-numbers-container,
   article.recipe-card .recipe-feedback-container {
     z-index: 1;
@@ -206,7 +220,63 @@ article.recipe-card {
 
 @media screen and (max-width: 640px) {
   p.recipe-description {
+    display: none; }
+  button.card-button {
     display: none; } }
+
+@media screen and (min-width: 641px) {
+  article.recipe-card {
+    --picture-height: 160px;
+    grid-auto-rows: auto min-content 0 min-content min-content;
+    background: var(--light-background);
+    border: 0 solid #444444;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px #a5a5a5;
+    grid-template-areas: "title" "picture" "recipe-numbers-container" "recipe-description" "recipe-feedback-container"; }
+    article.recipe-card h3,
+    article.recipe-card p,
+    article.recipe-card .recipe-feedback-container,
+    article.recipe-card .recipe-numbers-container {
+      padding: 1rem 0.5rem; }
+    article.recipe-card h3 {
+      grid-area: title;
+      background: none;
+      color: black;
+      font-size: 1.5em;
+      border-top-left-radius: inherit;
+      border-top-right-radius: inherit;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0; }
+    article.recipe-card picture {
+      position: relative;
+      height: var(--picture-height);
+      border-radius: 0; }
+    article.recipe-card p.recipe-description {
+      grid-area: recipe-description;
+      color: var(--dark-text); }
+    article.recipe-card .recipe-numbers-container {
+      position: relative;
+      top: -1.3em;
+      grid-area: recipe-numbers-container;
+      margin-top: 0; }
+    article.recipe-card .recipe-feedback-container {
+      grid-area: recipe-feedback-container;
+      text-shadow: none;
+      color: var(--dark-text);
+      justify-content: flex-end; }
+      article.recipe-card .recipe-feedback-container span.material-icons.favourite, article.recipe-card .recipe-feedback-container span.material-icons.non-favourite {
+        margin-right: 1rem; }
+      article.recipe-card .recipe-feedback-container button.card-button {
+        margin-right: auto;
+        font-size: 0.6em;
+        font-weight: 450;
+        color: var(--primary-dark);
+        padding: 0.5rem 0.5rem;
+        border: 0 solid white;
+        border-radius: 0.3rem;
+        background: none; }
+        article.recipe-card .recipe-feedback-container button.card-button:hover {
+          background: #38739615; } }
 
 body {
   background: #d4d3d3; }
