--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,18 @@ header {
     }
 }
 
+@media screen and (min-width: 993px) {
+    header img.logo-top-medium {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 641px) and (max-width: 992px) {
+    header img.logo-top {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 640px) {
     header {
         display: none;
