--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'layout/main';
 @import 'layout/section-recipe-collection';
 @import 'components/recipe-card';
+@import 'components/recipe-card-desktop';
 
 body {
     background: rgb(212, 211, 211);
